--- a/style.css
+++ b/style.css
@@ -64,12 +64,11 @@ header{
 
 .menu {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     max-width: 1150px;
-    /*border: 1px solid blue;*/
     margin: 0 auto;
     padding: 10px 45px;
-    margin-bottom: 100px;
+    flex-wrap: wrap;
 }
 
 .menu a {
@@ -78,6 +77,18 @@ header{
     text-decoration: none;
     color: #000;
     cursor: pointer;
+    border-radius: 5px;
+    transition: 0.3s;
+}
+
+.menu-section {
+    padding: 10px;
+}
+
+.menu-section > a:hover {
+    background-color: #750d37;
+    color: #fff;
+    transition: 0.3s;
 }
 
 .language-section {
@@ -89,10 +100,25 @@ header{
     border-radius: 5px;
 }
 
+@media (max-width: 481px) {
+    .menu {
+        justify-content: center;
+    }
+    
+    .menu-section {
+        margin-bottom: 10px;
+    }
+
+    .menu a {
+        font-size: 17px;
+    }
+}
+
 .about-user{
     display: flex;
     justify-content: space-between;
     border-top: 34px solid #750d37;
+    margin-top: 100px;
 }
 
 .about-user div{
@@ -177,7 +203,7 @@ header{
     margin: 0;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 862px) {
     .container{
         padding: 0 18px;
     }
@@ -248,4 +274,8 @@ footer p{
     background-color: #750d37;
     color: #fff;
     transition: 0.3s;
+}
+
+.contact {
+    margin: 50px 0px;
 }
